# syncflow-app

./: .gitattributes  .gitignore  Cargo.toml
.cargo/: config.toml
.github/workflows/: build.yaml
livekit-gstreamer/: Cargo.toml  script.sh
livekit-gstreamer/examples/: listen_and_publish_streams.rs  listen_and_publish_umc_1820.rs  listen_and_publish_vaddio_cameras.rs  lk_publish_cam_h264.rs  lk_publish_image_jpeg.rs  lk_publish_mic.rs  lk_publish_rtsp_stream.rs  lk_publish_scarlett2i2.rs  lk_publish_umc_1820.rs  multi_track_recording.rs  multi_track_recording_mac.rs  multi_track_recording_win.rs  record_multichannel_mix.rs  record_umc_1820.rs  stream_multi.rs  stream_multi_channel_alsa_mix.rs  stream_subscribe_audio.rs  stream_subscribe_screen.rs  stream_subscribe_video.rs  test_rtsp_simple.rs
livekit-gstreamer/examples/helper/: s3_uploader.rs  wait.rs
livekit-gstreamer/src/: alsa_mix_pipeline.rs  alsa_stream.rs  lib.rs  lk_participant.rs  media_device.rs  media_stream.rs  rtsp_stream.rs  single_container_pipeline.rs  utils.rs
livekit-gstreamer/src/devices/: linux.rs  mac.rs  mod.rs
syncflow-publisher/: .prettierignore  .prettierrc  hooks.client.ts  package.json  pnpm-lock.yaml  vite.config.js
syncflow-publisher/src/: app.css  app.html  hooks.client.ts
syncflow-publisher/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
syncflow-publisher/src-tauri/icons/: icon.icns
syncflow-publisher/src-tauri/src/: devices.rs  errors.rs  lib.rs  models.rs  register.rs  s3_uploader.rs  session_listener.rs  syncflow_publisher.rs  utils.rs
syncflow-publisher/src/lib/: store.svelte.ts
(+12 files in other folders)
